Fixed skull meta inconsistencies error & clear trails button